--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-image": "^2.4.0",
     "gatsby-plugin-manifest": "^2.4.0",
     "gatsby-plugin-offline": "^3.2.0",
+    "gatsby-plugin-postcss": "^2.3.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-sharp": "^2.6.0",
     "gatsby-plugin-typography": "^2.5.0",
@@ -19,6 +20,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-typography": "^0.16.19",
+    "tailwindcss": "^1.4.4",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
     "typography-theme-ocean-beach": "^0.16.19"
