--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-social-icons": "^4.1.0",
     "react-typography": "^0.16.19",
     "tailwindcss": "^1.4.4",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
+    "typography-theme-grand-view": "^0.16.19",
     "typography-theme-ocean-beach": "^0.16.19"
   },
   "devDependencies": {
