--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-grid-gallery": "^0.5.5",
     "react-helmet": "^6.0.0",
+    "react-image-lightbox": "^5.1.1",
+    "react-images": "^1.1.7",
     "react-social-icons": "^4.1.0",
     "react-typography": "^0.16.19",
     "tailwindcss": "^1.4.4",
